<resources>
    <string name="app_name">Code cafe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_try_again">Try again</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="title_activity_user_data">UserDataActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_registry">Email not found.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_settings">Settings</string>
    <string name="action_orders">My orders</string>
    <string name="action_about">About us</string>
    <string name="app_desc">This is the menu of the code cafe in the Software University in Sofia.</string>
    <string name="softUni_address">
        Tintyava 15-17, 2nd floor, Sofia 1113, Bulgaria.
    </string>
    <string name="softUni_timeOpen">10:00 - 22:00 everyday</string>
</resources>
